--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
 		"hoist-non-react-statics": "^3.3.0",
 		"invariant": "^2.2.4",
 		"lodash": "^4.17.11",
+		"material-ui-confirm": "^2.1.1",
 		"prop-types": "^15.7.2",
 		"react": "^16.13.1",
 		"react-dom": "^16.13.1",
